--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,13 +5,13 @@
     <title>Home</title>
 </head>
 <body>
-<h1>Hello world!</h1>
 <br>
 {% for post in posts %}
     <div>
-        <h3>{{ post.title }}</h3>
-        <div>
-            <img src="{{ post.photo.url }}" alt="{{ post.title }}">
+        <h2>{{ post.title }}</h2>
+        <div class="container">
+            <img src="{{ post.photo.url }}" alt="{{ post.title }}" height="400" width="400"><br>
+            <br>
             {{ post.content }}
         </div>
         <p>{{ post.created_at|date:"Y-m-d" }}</p>
